--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_core: ^0.5.0
   fluttertoast: ^7.0.4
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
