--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^0.5.0
   fluttertoast: ^7.0.4
   http: ^0.12.2
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
