--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   fluttertoast: ^7.0.4
   http: ^0.12.2
   modal_progress_hud: ^0.1.3
+  image_picker: ^0.6.7+7
+  firebase_storage: ^4.0.0
+  splashscreen: ^1.2.0
 
 dev_dependencies:
   flutter_test:
